# symphony

./: .eslintrc.cjs  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Makefile  README.md  WORKFLOW.md  WORKFLOW.smoke.md  docs.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  wdio.conf.mjs
apps/performer/: pyproject.toml
apps/performer/src/performer/: __init__.py  __main__.py  contracts.py
apps/performer/src/performer/agent_protocol/: __init__.py  host.py  protocol.py
apps/performer/src/performer/backends/: provider_backend_interface.py
apps/performer/src/performer/backends/codex/: codex_backend_impl.py
apps/performer/src/performer/command_broker/: __init__.py  cli.py  workspace_channel.py
apps/performer/src/performer/conversation_protocol/: __init__.py  host.py
apps/performer/src/performer/events/: event_mapper.py
apps/performer/src/performer/profile_control/: host.py
apps/performer/src/performer/role_execution/: __init__.py  runtime.py
apps/performer/src/performer/root_reconciler/: __init__.py  runtime.py
apps/performer/src/performer/root_turn/: __init__.py  host.py  runtime.py
apps/performer/src/performer/session_runtime/: __init__.py  manager.py
apps/performer/src/performer/stage_execution/: __init__.py  runtime.py
apps/performer/src/performer/stage_protocol/: __init__.py  host.py
apps/performer/src/performer/turn_protocol/: contract_adapter.py  host.py
apps/performer/src/performer/turn_runtime/: runtime.py
apps/performer/tests/: conftest.py  test_agent_protocol_session.py  test_agent_runtime.py  test_codex_backend.py  test_command_broker_cli.py  test_profile_control.py  test_root_turn_runtime.py  test_runtime.py  test_scaffold.py  test_sdk_factory.py  test_stage_runtime.py  test_turn_host.py  test_workspace_command_channel.py
apps/podium-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/podium-desktop/src-tauri/capabilities/: default.json
apps/podium-desktop/src-tauri/capabilities/e2e/: wdio.json
apps/podium-desktop/src-tauri/icons/: icon.icns
apps/podium-desktop/src-tauri/src/: conductor_process.rs  desktop_controller.rs  desktop_lifecycle.rs  lib.rs  main.rs  oauth_return.rs  private_ipc.rs  repository_context.rs  runtime_bundle.rs
docs/: architecture.md  real-e2e-design.md  real-flow.md  real-run-testing-guide.md  workflow.md
tasks/: coordinator-business-scope.md  plan.md  spec.md  todo.md
tests/: conftest.py  test_acceptance.py  test_acceptance_catalog.py  test_acceptance_impact.py  test_architecture_inventory.py  test_checkpoint_4b.py  test_cli.py  test_cli_part1.py  test_cli_part2.py  test_cli_support.py  test_code_size_gate.py  test_codex_client.py  test_codex_client_part1.py  test_codex_client_part2.py  test_codex_client_support.py  test_completion_verifier.py  test_conductor_api.py  test_conductor_api_pipeline_only.py  test_conductor_cli.py  test_conductor_gate.py  test_conductor_ingress.py  test_conductor_linear.py  test_conductor_linear_projector.py  test_conductor_managed_run_attempts.py  test_conductor_managed_run_branch_join.py  test_conductor_managed_run_contract_ownership.py  test_conductor_managed_run_coordinator.py  test_conductor_managed_run_dependency_ingestion.py  test_conductor_managed_run_driver.py  test_conductor_managed_run_human_action.py  test_conductor_managed_run_projection.py  test_conductor_managed_run_projection_sync.py  test_conductor_managed_run_store.py  test_conductor_managed_run_verifier.py  test_conductor_performer_control.py  test_conductor_performer_credentials.py  test_conductor_performer_state.py  test_conductor_phase.py  (+186 more)
(+639 files in other folders)
