[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony-performer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["openai-codex==0.1.0b3", "symphony-contracts==0.1.0"]

[project.optional-dependencies]
test = ["pytest>=8.3,<9"]
build = ["pyinstaller==6.16.0"]

[project.scripts]
performer = "performer.__main__:main"
symphony = "performer.command_broker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
