[package]
name = "symphony-podium-desktop"
version = "0.1.0"
description = "Symphony Podium Desktop"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.4"
tokio = { version = "1", features = ["process", "rt-multi-thread", "sync", "time"] }
