[package]
name = "symphony-podium-desktop"
version = "0.1.0"
description = "Symphony Podium Desktop"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
hex = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
symphony-contracts = { path = "../../../packages/contracts/generated/rust" }
tauri = { version = "2.11.1", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-deep-link = "=2.4.4"
tokio = { version = "1", features = ["process", "rt-multi-thread", "sync", "time"] }
url = "2"
tauri-plugin-opener = "2.5.2"
chrono = "=0.4.42"
